[package]
name = "tyozo"
version = "0.1.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
license="MIT"
readme = "README.md"
edition = "2018"

description = "in-memory key-value store"
keywords = ["tyozo", "kvs", "in-memory", "key value store"]
categories = ["database", "database-implementations"]
repository = "https://github.com/k-nasa/tyozo"
documentation = "https://docs.rs/tyozo"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
